--- a/custom-calendar-app/package.json
+++ b/custom-calendar-app/package.json
@@ -11,6 +11,7 @@
     "android-clean": "cd android && ./gradlew clean && cd ..",
     "build-apk": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "generate-apk": "cd android && ./gradlew assembleRelease -x bundleReleaseJsAndAssets",
+    "build":"npm run  android-clean && npm run build-apk && npm run generate-apk  ",
     "ts": "yarn tsc"
   },
   "dependencies": {
